Fix RelocateNMethod